add bodyparts router and service
